my-react-app/src/styles/components/_headerKasaLocation.scss
.header {
  margin: 4% auto 1% auto;
  max-width: 1600px;
  height: 200px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  color: $color-1;
  @media screen and (max-width: 1800px) {
    margin: 4% 10%;
  }
  @media screen and (max-width: 800px) {
    flex-direction: column;
    height: auto;
  }
  .kasaInfo {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    .span {
      display: block;
    }
    h3 {
      font-size: 2.5em;
      // line-height: 30px;
      // line-height: 150%;
      @media screen and (max-width: 800px) {
        font-size: 1.8em;
      }
      .location {
        font-size: 0.5em;
        line-height: 150%;
        @media screen and (max-width: 800px) {
          font-size: 0.5em;
        }
      }
    }
    .tagBtnContainer {
      display: flex;
      width: 100%;

      .tagBtn {
        margin-right: 3%;
        width: 115px;
        height: 25px;
        background-color: $color-1;
        color: $white;
        border-radius: 10px;
        font-size: 0.8em;
        @include verticalCenter;
        text-align: center;
        padding: 15px 0;
        @media screen and (max-width: 800px) {
          font-size: 0.7em;
          padding: 10px 0;
        }
      }
    }
  }
  .hostInfo {
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between;
    @media screen and (max-width: 800px) {
      align-items: flex-start;
      flex-direction: row-reverse;
      align-items: center;
      width: 100%;
      margin-top: 3%;
    }
    .hostDescription {
      width: 100%;
      @include verticalCenter;
      justify-content: flex-end;

      span {
        text-align: right;
        padding-right: 3%;
        font-size: 18px;
        font-weight: 500;
        line-height: 26px;
      }
      img {
        border-radius: 50%;
        width: 40%;
      }
    }

    .hostRating {
      display: flex;
      justify-content: flex-end;
      width: 100%;
      img {
        margin-left: 8%;
        @media screen and (max-width: 800px) {
          width: 8%;
          margin-left: 0;
          margin-right: 8%;
        }
      }
      @media screen and (max-width: 800px) {
        justify-content: flex-start;
      }
    }
  }
}

